# contx

./: .contxignore  .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
.contx/: .gitignore.jsonl  README.md.jsonl  config.json  install.sh.jsonl  pyproject.toml.jsonl
.contx/contx/: __init__.py.jsonl  __main__.py.jsonl  cli.py.jsonl  config.py.jsonl  drafting.py.jsonl  entry.py.jsonl  hooks.py.jsonl  ignore.py.jsonl  mcp_server.py.jsonl  mcp_tools.py.jsonl  paths.py.jsonl  repo.py.jsonl  search.py.jsonl  skill_install.py.jsonl  staging.py.jsonl  store.py.jsonl  transcript.py.jsonl
.contx/docs/: BACKLOG.md.jsonl
contx/: __init__.py  __main__.py  cli.py  config.py  drafting.py  entry.py  hooks.py  ignore.py  mcp_server.py  mcp_tools.py  paths.py  repo.py  search.py  skill_install.py  staging.py  store.py  transcript.py
docs/: BACKLOG.md  LINKEDIN.md  PITCH.md
tests/: conftest.py  test_ast_dispatch.py  test_ast_python.py  test_bootstrap_filter.py  test_bootstrap_repo.py  test_cli.py  test_config.py  test_diagram_drawio.py  test_diagram_graph.py  test_diagram_layout.py  test_drafting.py  test_e2e.py  test_entry.py  test_git_history.py  test_hooks.py  test_ignore.py  test_main_module.py  test_mcp_e2e.py  test_mcp_tools.py  test_paths.py  test_precommit_e2e.py  test_repo.py  test_search.py  test_skill_install.py  test_staging.py  test_store.py  test_summarizer_docker_compose.py  test_summarizer_github_actions.py  test_summarizer_kubernetes.py  test_summarizers_registry.py  test_transcript.py  test_web.py  test_web_port.py
(+114 files in other folders)
