[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contx"
version = "0.1.0"
description = "Git for context: append-only intent logs per file/symbol"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mrinmoy Saikia", email = "mrinmoy.saikia@xeno.in" }]
dependencies = [
    "typer>=0.12.0",
    "python-ulid>=2.2.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
contx = "contx.cli:app"
contx-mcp = "contx.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=contx --cov-report=term-missing"
